@@ -58,6 +58,17 @@
 /*#define HARBOUR_STRICT_ANSI_C */
 
 /* ***********************************************************************
+ * Define this option if you want the /y YACC trace option to be available
+ * in the Harbour compiler.
+ *
+ * Note that if you turn this on, the compiler will slighly grow in size.
+ *
+ * By default this is turned on.
+ * TODO: This should be disabled, when the parser has matured.
+*/
+#define HARBOUR_YYDEBUG
+
+/* ***********************************************************************
  * This symbol defines if we are trying to compile using GCC for OS/2
  *
  * By default it is disabled (symbol is not defined)
@@ -93,6 +104,10 @@
 /* ***********************************************************************
  * This symbol defines if we want an ability to create and link OBJ files
  * generated by Harbour compiler
+ *
+ * Note that the Virtual Machine support need a platform/compiler specific
+ * assembler module, so you will be able to use this only with 32 bits
+ * Borland C/C++ compilers.
  *
  * By default it is disabled (symbol is not defined)
 */
