@@ -41,6 +41,13 @@
  *       memvars now - we should add runtime recognition of variable type)
  *       - work in progress (rglab@imid.med.pl)
  * 4) in some cases incorrect warnings are generated when -w option is used
+ * 5) in some cases GPF occurs when -w option is used, example:
+ *    LOCAL nDouble := NumAnd32(RandGetLong() / 65536, 32767) / 997
+ * 6) support for expr:expr (QSELF():cVar) syntax.
+ *    see tests/broken/clasname.prg
+ * 7) Change the pcode generated by ::cVar from Self:cVar to QSELF():cVar
+ * 8) Support this syntax: _FIELD->c->mmezo := mt
+ * 9) Support this syntax: nPtr := @Hello()
  */
 
 /* Compile using: bison -d -v harbour.y */
@@ -270,7 +277,9 @@ static BOOL SwitchCmp( char * szString, char * szSwitch );
 void PrintUsage( char * );
 void PrintCredits( void );
 
-#define YYDEBUG        1    /* Parser debug information support */
+#ifdef HARBOUR_YYDEBUG
+   #define YYDEBUG        1 /* Parser debug information support */
+#endif
 
 typedef enum
 {
